[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/hud.gd" type="Script" id=1]
[ext_resource path="res://assets/danc_cc_by/health_under.png" type="Texture" id=2]
[ext_resource path="res://assets/danc_cc_by/health_over.png" type="Texture" id=3]
[ext_resource path="res://assets/danc_cc_by/healthpack.png" type="Texture" id=4]
[ext_resource path="res://assets/eamonn/power.png" type="Texture" id=5]
[ext_resource path="res://assets/danc_cc_by/skull.png" type="Texture" id=6]

[node name="HUD" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HealthWidget" type="TextureProgress" parent="TopLeft"]
margin_left = 14.0
margin_top = 17.0
margin_right = 93.0
margin_bottom = 57.0
rect_scale = Vector2( 2, 2 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TopLeft/HealthWidget"]
margin_left = 83.5
margin_top = -1.0
margin_right = 123.5
margin_bottom = 39.0
texture = ExtResource( 4 )

[node name="EnergyWidget" type="TextureProgress" parent="TopLeft"]
margin_left = 15.0
margin_top = 71.0
margin_right = 94.0
margin_bottom = 111.0
rect_scale = Vector2( 2, 2 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TopLeft/EnergyWidget"]
margin_left = 83.5
margin_top = -1.0
margin_right = 123.5
margin_bottom = 39.0
texture = ExtResource( 5 )

[node name="TopRight" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 939.772
margin_top = 18.6877
margin_right = 1043.77
margin_bottom = 175.688

[node name="HeatWidget" type="TextureProgress" parent="TopRight"]
margin_left = 26.6969
margin_top = 160.181
margin_right = 105.697
margin_bottom = 200.181
rect_rotation = -90.0
rect_scale = Vector2( 2, 2 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TopRight"]
margin_left = 10.6787
margin_top = 173.529
margin_right = 50.6787
margin_bottom = 213.529
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
